--- a/.github/workflows/auto_package_bilibili-helper.yml
+++ b/.github/workflows/auto_package_bilibili-helper.yml
@@ -1,11 +1,13 @@
 name: Build Release
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
     paths:
       - "src/main/resources/release.json"
+    
 
 jobs:
   build:
